--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,12 +4,17 @@ main {
 
 table {
   border-collapse: collapse;
+  margin: 10px 0;
 }
 
 td, th {
   border: 1px solid #999;
   padding: 3px;
   text-align: left;
+}
+
+tfoot td:first-of-type {
+  border: none;
 }
 
 button {
